DEV: add example tg bot

--- a/settings/config.py.example
+++ b/settings/config.py.example
@@ -3,3 +3,4 @@ PROXY_IP = ""
 PROXY_PORT = ""
 PROXY_LOGIN = ""
 PROXY_PASSWORD = ""
+PROXY_URL = f"http://{PROXY_LOGIN}:{PROXY_PASSWORD}@{PROXY_IP}:{PROXY_PORT}"
