--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ asyncio = "^3.4.3"
 aiohttp = {extras = ["speedups"], version = "^3.8.1"}
 requests = "^2.28.1"
 aiogram = "^2.22.1"
+SQLAlchemy = "^1.4.40"
 
 [tool.poetry.dev-dependencies]
 
